--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,10 @@
   font-size: large;
 }
 
+.App-body {
+	text-align: left;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
